# raws

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  init.sh
.claude/: settings.json
progress/: claude-progress-recent.txt  claude-progress.txt  issues-01.json  issues-02.json  issues-03.json  issues-04.json  issues-05.json  issues-06.json  milestone-01.json  milestone-02.json  milestone-03.json  milestone-04.json  milestone-05.json  milestone-06.json  milestone-07.json  milestone-08.json  milestone-09.json  milestone-10.json  milestone-11.json  milestone-12.json  milestone-13.json  milestone-14.json  summary.json
progress/validation/: 01_validation_overview.md  apigateway.json  authentication.json  autoscaling.json  cloudformation.json  cloudfront.json  cloudwatch.json  codebuild.json  codepipeline.json  dynamodb.json  ec2.json  ecr.json  ecs.json  elasticache.json  elb.json  elbv2.json  global_options.json  iam.json  kinesis.json  kms.json  lambda.json  logs.json  rds.json  route53.json  s3.json  s3api.json  secretsmanager.json  sns.json  sqs.json  ssm.json  stepfunctions.json  sts.json  summary.json
prompt/: .env.example  coding_prompt.md  initializer_prompt.md  run_agent.sh  spec.txt  validation_prompt.md
src/: main.rs
src/cli/: args.rs  auto_prompt.rs  binary_output.rs  completion.rs  driver.rs  jmespath.rs  mod.rs  streaming.rs
src/cli/commands/: configure.rs  mod.rs  service.rs
src/cli/customizations/: iam.rs  mod.rs  rds.rs  route53.rs
src/cli/formatter/: json.rs  mod.rs  table.rs  text.rs  yaml.rs
src/core/: error.rs  mod.rs  paginate.rs  retry.rs  waiter.rs
src/core/auth/: sigv4.rs
src/core/config/: loader.rs  mod.rs  provider.rs
src/core/credentials/: assume_role.rs  chain.rs  env.rs  imds.rs  mod.rs  process.rs  profile.rs  sso.rs  web_identity.rs
src/core/endpoint/: resolver.rs
src/core/http/: client.rs  mod.rs  proxy.rs  request.rs
src/core/model/: embedded.rs  loader.rs  mod.rs  store.rs
src/core/protocol/: json.rs  mod.rs  query.rs  rest_json.rs  (+1 more)
(+14 files in other folders)
