[package]
name = "raws"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raws"
path = "src/main.rs"

[features]
default = ["embed-models"]
embed-models = ["include_dir"]

[dependencies]
anyhow = "1"
include_dir = { version = "0.7", optional = true }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
percent-encoding = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
